--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-ewelcome=Welcome Anand 
+ewelcome=Welcome CSM Friends  
 required=is required
 notFound=has not been found
 duplicate=is already in use
